# Payload-SDK

./: .gitignore  CMakeLists.txt  README-manifold3-linux-app-dev.zh-CN.md  README-manifold3-quickstart.zh-CN.md  README-manifold3-system-dev.zh-CN.md  README.md
applications/manifold_cloud_agent/: .gitignore  CMakeLists.txt  README.md
applications/manifold_cloud_agent/config/: credentials.env.example
applications/manifold_cloud_agent/docs/: 2026-07-21-初步计划.md  README.md  m0-aircraft-info-probe.md  m0-baseline-checklist.md  progress.md
applications/manifold_cloud_agent/packaging/: m0-aircraft-info-probe.app.json.in
applications/manifold_cloud_agent/src/probe/: m0_aircraft_info_probe.c  m0_probe_credentials.h.in
docs/: 01-overview.md  02-network.md  03-ws-cloud-integration.md  04-deploy-dpk.md  AGENTS.md  Manifold3-M4TD-开发步骤.md  README-manifold3-wifi-8852bu.zh-CN.md  README.md  WORKSPACE-README.md
psdk_lib/include/: dji_flight_controller.h  dji_psdk_hoist_controller.h  dji_typedef.h  dji_version.h
psdk_lib/lib/armcc_cortex-m4/: libpayload.lib
samples/sample_c++/platform/linux/manifold2/application/: main.cpp
samples/sample_c/module_sample/data_transmission/: test_data_transmission.c
samples/sample_c/module_sample/fc_subscription/: test_fc_subscription.c
samples/sample_c/module_sample/flight_control/: test_flight_control.c
samples/sample_c/module_sample/hms/: test_hms.c
samples/sample_c/module_sample/hoist_contro/: test_hoist_controller.c  test_hoist_controller.h
samples/sample_c/module_sample/ws_telemetry/: README.zh-CN.md  ws_liveview.c  ws_liveview.h  ws_telemetry.c  ws_telemetry.h  ws_telemetry_config.h
samples/sample_c/platform/linux/manifold2/application/: dji_sdk_config.h  main.c
samples/sample_c/platform/linux/manifold3/app_json/: app.json
samples/sample_c/platform/linux/manifold3/application/: dji_sdk_app_info.h  dji_sdk_config.h  main.c
samples/sample_c/platform/rtos_freertos/gd32f527_development_board/application/: application.c
samples/sample_c/platform/rtos_freertos/gd32f527_development_board/drivers/GD32F5xx_usb_library/device/class/cdc/Source/: cdc_acm_core.c
samples/sample_c/platform/rtos_freertos/gd32f527_development_board/project/armgcc/: CMakeLists.txt
samples/sample_c/platform/rtos_freertos/stm32f4_discovery/project/mdk/: mdk_app.uvprojx
tools/build_dpk/: build_dpk.sh
